Reorganize project for maven appassembler